# uRemote

./: CMakeLists.txt  README.md  vcpkg.json
uRemote/: BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  cli.cpp  cli.h  network.cpp  network.h  uRemote.cpp  uRemote.h
